k8s/Ingress/ingress-metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-metrics
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
  annotations:
    # These annotations tell a standard Prometheus setup to scrape this service
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: metrics
      port: 10254
      targetPort: 10254
      protocol: TCP
  selector:
    # This selector targets the Minikube NGINX controller pod
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
